opam-version: "2.0"
version: "0.1.1"
synopsis:
  "OCaml bindings to the Objective-C runtime and some base frameworks"
description: """\
This package provides OCaml bindings to the Objective-C runtime and
the following iOS frameworks: Foundation, WebKit, Vision, CoreImage, and Photos.
"""
maintainer: ["Boris D. <borisd@gmx.com>"]
authors: ["Boris D. <borisd@gmx.com>"]
license: "ISC"
tags: ["objc" "bindings" "cocoa" "ios"]
homepage: "https://github.com/dboris/camlkit"
bug-reports: "https://github.com/dboris/camlkit/issues"
depends: [
  "ocaml-ios"
  "dune" {>= "3.13"}
  "ctypes-ios"
  "ctypes-foreign-ios"
]
build: [
  [
    "dune" "build"
    "-p" "camlkit-base"
    "-j" jobs
    "-x" "ios"
    "@install"
  ]
]
dev-repo: "git+https://github.com/dboris/camlkit.git"
