opam-version: "2.0"
version: "0.1.1"
synopsis: "OCaml bindings to the AppKit framework"
description: "OCaml bindings to the AppKit framework"
maintainer: ["Boris D. <borisd@gmx.com>"]
authors: ["Boris D. <borisd@gmx.com>"]
license: "ISC"
tags: ["objc" "bindings" "cocoa" "gnustep"]
homepage: "https://github.com/dboris/camlkit"
bug-reports: "https://github.com/dboris/camlkit/issues"
depends: [
  "ocaml"
  "dune" {>= "3.13"}
  "camlkit-base" {= version}
  "alcotest" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/dboris/camlkit.git"
