opam-version: "2.0"
version: "0.1.1"
synopsis: "Higher-level wrappers for Cocoa APIs"
description: "Higher-level wrappers for Cocoa APIs"
maintainer: ["Boris D. <borisd@gmx.com>"]
authors: ["Boris D. <borisd@gmx.com>"]
license: "ISC"
tags: ["objc" "cocoa" "ios" "gnustep"]
homepage: "https://github.com/dboris/camlkit"
bug-reports: "https://github.com/dboris/camlkit/issues"
depends: [
  "ocaml-ios"
  "dune" {>= "3.13"}
  "camlkit-base-ios" {= version}
  "camlkit-gui-ios" {= version}
]
build: [
  [
    "dune" "build"
    "-p" "camlkit"
    "-j" jobs
    "-x" "ios"
    "@install"
  ]
]
dev-repo: "git+https://github.com/dboris/camlkit.git"
