(library
 (name PhotosUI)
 (public_name camlkit-gui.PhotosUI)
 (enabled_if (or
  (= %{context_name} default.ios)
  (= %{context_name} device.ios)
  (= %{context_name} simulator.ios)
  (= %{context_name} simulator-arm.ios)
  (= %{context_name} catalyst.ios)))
 (flags :standard -ccopt "-framework PhotosUI")
 (libraries
  camlkit-base.runtime
  camlkit-base.CoreFoundation
  camlkit-base.CoreGraphics
  camlkit-gui.UIKit))

(documentation (package camlkit-gui))