(library
 (name SpriteKit)
 (public_name camlkit-gui.SpriteKit)
 (flags :standard -ccopt "-framework SpriteKit")
 (enabled_if (= %{system} macosx))
 (libraries
  camlkit-base.runtime
  camlkit-base.CoreFoundation
  camlkit-base.CoreGraphics
  camlkit-gui.CoreText))

(documentation (package camlkit-gui))