(library
 (name UIKit)
 (public_name camlkit-gui.UIKit)
 (enabled_if (or
  (= %{context_name} default.ios)
  (= %{context_name} device.ios)
  (= %{context_name} simulator.ios)
  (= %{context_name} simulator-arm.ios)
  (= %{context_name} catalyst.ios)
  (= %{context_name} catalyst)))
;  (flags :standard -ccopt "-framework UIKit")
 (libraries
  camlkit-base.Foundation
  camlkit-base.CoreAnimation
  camlkit-gui.CoreText
  camlkit-base.CoreAutoLayout))

(documentation (package camlkit-gui))