(library
 (name Vision)
 (public_name camlkit-gui.Vision)
;  (enabled_if (= %{system} macosx))
 (flags :standard -ccopt "-framework Vision")
 (libraries
  camlkit-base.foundation
  camlkit-base.CoreFoundation
  camlkit-gui.CoreGraphics
  camlkit-gui.CoreVideo))

(documentation (package camlkit-gui))