(library
 (name appkit)
 (public_name camlkit-gui.appkit)
 (flags :standard %{read:flags.txt})
 (libraries camlkit-base.foundation))

(rule (enabled_if (= %{system} macosx))
 (with-stdout-to flags.txt (run echo "-ccopt \"-framework AppKit\"")))

(rule (enabled_if (<> %{system} macosx))
 (with-stdout-to flags.txt (run echo "")))