(library
 (name appkit_extra)
 (public_name camlkit-gui.appkit-extra)
 (flags :standard %{read:flags.txt})
 (libraries foundation))

(rule (enabled_if (= %{system} macosx))
 (with-stdout-to flags.txt (run echo "-ccopt \"-framework AppKit\"")))

(rule (enabled_if (<> %{system} macosx))
 (with-stdout-to flags.txt (run echo "")))