(executable
 (name main)
 (enabled_if (or
  (= %{context_name} device.ios)
  (= %{context_name} simulator.ios)
  (= %{context_name} simulator-arm.ios)
  (= %{context_name} catalyst.ios)))
 (flags :standard -ccopt "-framework UIKit")
 (libraries
  camlkit-base.Foundation
  camlkit-gui.UIKit))

(subdir Demo.app
 (rule
  (alias default)
  (deps ../Info.plist ../main.exe)
  (targets Info.plist Demo)
  (enabled_if (or
   (= %{context_name} device.ios)
   (= %{context_name} simulator.ios)
   (= %{context_name} simulator-arm.ios)
   (= %{context_name} catalyst.ios)))
  (action (progn
   (copy ../Info.plist Info.plist)
   (copy ../main.exe Demo)))))