(library
 (name foundation)
 (public_name camlkit-base.foundation)
 (flags :standard %{read:flags.txt})
 (libraries camlkit-base.runtime))

(documentation (package camlkit-base))

(rule (enabled_if (= %{system} macosx))
 (with-stdout-to flags.txt (run echo "-ccopt \"-framework Foundation\"")))

(rule (enabled_if (<> %{system} macosx))
 (with-stdout-to flags.txt (run echo "")))