(test
 (name test_objc)
 (modules test_objc)
 (build_if (= %{context_name} "default"))
 (libraries camlkit-base.foundation alcotest))

(test
 (name test_camlkit)
 (modules test_camlkit)
 (build_if (and
  %{lib-available:camlkit}
  (= %{context_name} "default")))
 (libraries camlkit-base.foundation camlkit alcotest))

(test
 (name test_stret)
 (modules test_stret)
 (build_if (= %{context_name} "default"))
 (libraries camlkit-base.foundation alcotest))
