(library
 (name webkit)
 (public_name camlkit-base.webkit)
 (enabled_if (or
  (= %{context_name} default.ios)
  (= %{context_name} device.ios)
  (= %{context_name} simulator.ios)
  (= %{context_name} simulator-arm.ios)
  (= %{context_name} catalyst.ios)))
 (flags :standard -ccopt "-framework WebKit")
 (libraries camlkit-base.foundation))
